--- a/404.html
+++ b/404.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Sorry!</title>
-</head>
-<body>
-    <h1>Sorry! This is site is neactive!</h1>
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://devs.difoon.fun" />
